grammar.bnf
block      = stmt*
stmt       = local_decl | assign | if | while | for | func_decl | call | ...
local_decl = "local" name ("=" expr)?
assign     = name "=" expr
expr       = term (("+"|"-") term)*
term       = factor (("*"|"/") factor)*
factor     = NUMBER | STRING | name | "(" expr ")"
